--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,15 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <title>Memster</title>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137782215-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-137782215-1');
+  </script>
 </head>
 
 <body>
