--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <title>Memster</title>
-  <meta name="description" content="Лучшие мемы">
+  <title>Lulz Tech: Лучший технологический стартап</title>
+  <meta name="description" content="Лучший стартап">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137782215-1"></script>
   <script>
